name: cassette
version: 0.1.0
author: Mathieu Boespflug
maintainer: Mathieu Boespflug <m@boespfl.ug>
synopsis: A combinator library for simultaneously defining parsers and pretty printers.
description:
  Combinator library for defining both type safe parsers and pretty
  printers simultaneously. This library performs well in practice
  because parsers and printers are implemented in CPS and because
  arguments are always curried, rather than packed into nested
  tuples.
category: Parsing, Text
license: Apache-2.0
license-file: LICENSE
cabal-version: >= 1.10.0
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base >= 4 && < 5
  default-language: GHC2021
  exposed-modules:
    Text.Cassette
    Text.Cassette.Prim
    Text.Cassette.Lead
    Text.Cassette.Combinator
    Text.Cassette.Char
    Text.Cassette.Number
