name: cassette
version: 0.2.0
author: Mathieu Boespflug
maintainer: Mathieu Boespflug <m@boespfl.ug>
synopsis: A combinator library for simultaneously defining parsers and pretty printers.
category: Parsing, Text
license: Apache-2.0
license-file: LICENSE
cabal-version: >= 1.10.0
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
    base >= 4 && < 5,
    profunctors >= 5
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options: -Wall -Wno-name-shadowing
  exposed-modules:
    Text.Cassette
    Text.Cassette.Char
    Text.Cassette.Combinator
    Text.Cassette.Internal.Tr
    Text.Cassette.Lead
    Text.Cassette.Number
    Text.Cassette.Prim
  other-modules:
    Control.Lens
